tests/paczka1/fuzzy1/32284607.err
Error in line 3: xSK39DC S672 50,1
Error in line 6: xSK39DC S428 02,8
Error in line 5: xSK39DC S909 3,2
Error in line 14: 41C5pmYZ S428 93,6
Error in line 24: Bwpmg6 S672 28,1
Error in line 34: A!07 A!07 67,7
